# doctored

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/doctored/: ast_handlers.py  cli.py  config.py  filters.py  handlers.py  iterators.py  models.py  parser.py  pipeline.py  settings.toml  state.py  transformers.py  visitor.py
tests/: test_filters.py  test_handlers.py  test_parser.py  test_pipeline.py  test_visitor.py
tests/example/: sample.py
